--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -53,40 +53,6 @@
             android:background="@color/purple_500" />
     </LinearLayout>
 
-<!--    <FrameLayout-->
-<!--        android:id="@+id/fl_local"-->
-<!--        android:layout_weight="1"-->
-<!--        android:layout_width="0dp"-->
-<!--        android:layout_height="200dp"-->
-<!--        app:layout_constraintLeft_toLeftOf="parent"-->
-<!--        app:layout_constraintTop_toTopOf="parent"-->
-<!--        android:background="@color/teal_200" />-->
-
-<!--    <FrameLayout-->
-<!--        android:id="@+id/fl_local_meta"-->
-<!--        android:layout_weight="2"-->
-<!--        android:layout_width="0dp"-->
-<!--        android:layout_height="200dp"-->
-<!--        app:layout_constraintRight_toRightOf="parent"-->
-<!--        app:layout_constraintTop_toTopOf="parent"-->
-<!--        android:background="@color/teal_700" />-->
-
-<!--    <FrameLayout-->
-<!--        android:id="@+id/fl_remote"-->
-<!--        android:layout_width="200dp"-->
-<!--        android:layout_height="200dp"-->
-<!--        app:layout_constraintLeft_toLeftOf="parent"-->
-<!--        app:layout_constraintTop_toBottomOf="@id/fl_local"-->
-<!--        android:background="@color/purple_200" />-->
-
-<!--    <FrameLayout-->
-<!--        android:id="@+id/fl_remote_meta"-->
-<!--        android:layout_width="200dp"-->
-<!--        android:layout_height="200dp"-->
-<!--        app:layout_constraintRight_toRightOf="parent"-->
-<!--        app:layout_constraintTop_toBottomOf="@id/fl_local_meta"-->
-<!--        android:background="@color/purple_500" />-->
-
     <LinearLayout
         android:id="@+id/ll_join"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -113,7 +79,6 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="789654"
             android:hint="@string/channel_id" />
 
         <androidx.appcompat.widget.AppCompatButton
@@ -124,20 +89,49 @@
 
     </LinearLayout>
 
+    <RadioGroup
+        android:id="@+id/rg_rtc_type"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/ll_join"
+        android:orientation="horizontal" >
+        <androidx.appcompat.widget.AppCompatRadioButton
+            android:id="@+id/rb_agora"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:checked="true"
+            android:textColor="@color/black"
+            android:text="@string/metabolt_type_agora"/>
+        <androidx.appcompat.widget.AppCompatRadioButton
+            android:id="@+id/rb_trtc"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black"
+            android:text="@string/metabolt_type_trtc"/>
+        <androidx.appcompat.widget.AppCompatRadioButton
+            android:id="@+id/rb_thunder"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:enabled="false"
+            android:textColor="@color/black"
+            android:text="@string/metabolt_type_thunder"/>
+    </RadioGroup>
+
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btn_req_token"
+        android:id="@+id/btn_init_rtc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/ll_join"
-        android:text="@string/req_token" />
+        android:text="@string/init_rtc" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_music_dance"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/btn_req_token"
+        app:layout_constraintBottom_toTopOf="@id/btn_init_rtc"
         android:text="@string/start_music_dance" />
 
     <androidx.appcompat.widget.AppCompatButton
@@ -147,5 +141,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/btn_music_dance"
         android:text="@string/start_music_beat" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tv_metabolt_show"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/ll_remote_video"
+        android:text="@string/metabolt_type_agora_desc" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
