--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,11 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="colorGrey">#939393</color>
+    <color name="live_main_bg">#1B1B1B</color>
+    <color name="live_green_bg">#34c759</color>
+    <color name="live_bottom_dialog_blue">#037BFF</color>
+    <color name="live_bottom_dialog_gray">#8F8F8F</color>
+    <color name="live_title_bg">#B7B7B7</color>
+    <color name="live_single_select_button_bg">#34c759</color>
+    <color name="live_single_select_button_bg_off">#999999</color>
 </resources>
