--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -115,8 +115,31 @@
             android:layout_height="wrap_content"
             android:enabled="false"
             android:textColor="@color/black"
-            android:text="@string/metabolt_type_thunder"/>
+            android:visibility="invisible"
+            android:text="@string/metabolt_type_thunder" />
     </RadioGroup>
+
+    <androidx.appcompat.widget.AppCompatSpinner
+        android:id="@+id/sp_avatar_view_type"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/rg_rtc_type"
+        android:entries="@array/avatar_view_type" />
+    <androidx.appcompat.widget.AppCompatSpinner
+        android:id="@+id/sp_sync_type"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toRightOf="@id/sp_avatar_view_type"
+        app:layout_constraintBottom_toTopOf="@id/rg_rtc_type"
+        android:entries="@array/sync_type" />
+    <androidx.appcompat.widget.AppCompatSpinner
+        android:id="@+id/sp_music_array"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/sp_avatar_view_type"
+        android:entries="@array/music_array" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_init_rtc"
