fix: 资源本地拷贝,不从网上下载

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -17,4 +17,7 @@
     <string-array name="music_array">
         <item>天涯</item>
     </string-array>
+    <string-array name="beat_array">
+        <item>singing</item>
+    </string-array>
 </resources>
