--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -140,6 +140,13 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toTopOf="@id/sp_avatar_view_type"
         android:entries="@array/music_array" />
+    <androidx.appcompat.widget.AppCompatSpinner
+        android:id="@+id/sp_beat_array"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/sp_music_array"
+        android:entries="@array/beat_array" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_init_rtc"
