--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -20,4 +20,7 @@
     <string-array name="beat_array">
         <item>singing</item>
     </string-array>
+    <string-array name="role_array">
+        <item>male</item>
+    </string-array>
 </resources>
