--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -108,7 +108,7 @@
     <RadioGroup
         android:id="@+id/rg_rtc_type"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toTopOf="@id/ll_join"
         android:orientation="horizontal" >
@@ -138,35 +138,35 @@
     <androidx.appcompat.widget.AppCompatSpinner
         android:id="@+id/sp_avatar_view_type"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toTopOf="@id/rg_rtc_type"
         android:entries="@array/avatar_view_type" />
     <androidx.appcompat.widget.AppCompatSpinner
         android:id="@+id/sp_sync_type"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         app:layout_constraintLeft_toRightOf="@id/sp_avatar_view_type"
         app:layout_constraintBottom_toTopOf="@id/rg_rtc_type"
         android:entries="@array/sync_type" />
     <androidx.appcompat.widget.AppCompatSpinner
         android:id="@+id/sp_music_array"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toTopOf="@id/sp_avatar_view_type"
         android:entries="@array/music_array" />
     <androidx.appcompat.widget.AppCompatSpinner
         android:id="@+id/sp_beat_array"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toTopOf="@id/sp_music_array"
         android:entries="@array/beat_array" />
     <androidx.appcompat.widget.AppCompatSpinner
         android:id="@+id/sp_role_array"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         app:layout_constraintLeft_toRightOf="@id/sp_beat_array"
         app:layout_constraintBottom_toTopOf="@id/sp_music_array"
         android:entries="@array/role_array" />
@@ -174,7 +174,7 @@
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_init_rtc"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/ll_join"
         android:text="@string/init_rtc" />
@@ -182,7 +182,7 @@
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_music_dance"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/btn_init_rtc"
         android:text="@string/start_music_dance" />
@@ -190,17 +190,41 @@
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_music_beat"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/btn_music_dance"
         android:text="@string/start_music_beat" />
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/tv_metabolt_show"
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_start_ai_face"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/ll_remote_video"
-        android:text="@string/metabolt_type_agora_desc" />
+        android:text="@string/start_ai_face" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tv_metabolt_hint"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toRightOf="@id/btn_start_ai_face"
+        app:layout_constraintTop_toBottomOf="@id/ll_remote_video"
+        android:text="@string/metabolt_ai_face" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_confirm_ai_face"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        app:layout_constraintLeft_toRightOf="@id/tv_metabolt_hint"
+        app:layout_constraintTop_toBottomOf="@id/ll_remote_video"
+        android:text="@string/confirm_ai_face" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_switch_makeup"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        app:layout_constraintLeft_toRightOf="@id/btn_confirm_ai_face"
+        app:layout_constraintTop_toBottomOf="@id/ll_remote_video"
+        android:text="@string/switch_makeup" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
